adjusting to Java 14